<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        tools:ignore="UseCompoundDrawables,UselessParent" >

        <ImageView
            android:id="@+id/barber"
            android:layout_width="@dimen/d1_barber_dialog_logo_width"
            android:layout_height="@dimen/d1_barber_dialog_logo_width"
            android:layout_gravity="center_horizontal"
            android:contentDescription="@string/barber"
            android:src="@drawable/user_default" />

        <ScrollView
            android:id="@+id/scrollView1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/d1_margin" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/na"
                    android:textSize="@dimen/font_large" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal" >

                    <ImageView
                        android:id="@+id/imageView1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:contentDescription="@string/call"
                        android:src="@android:drawable/sym_action_call" />

                    <TextView
                        android:id="@+id/phone"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:autoLink="phone"
                        android:text="@string/na_phone"
                        android:textSize="@dimen/font_large" />

                </LinearLayout>

                <TextView
                    android:id="@+id/textView1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/description"
                    android:textSize="@dimen/font_large" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/d1_sep"
                    android:background="@color/smoke"
                    android:orientation="vertical" >

                </LinearLayout>

                <TextView
                    android:id="@+id/description"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/na"
                    android:textSize="@dimen/font_medium" />

            </LinearLayout>
        </ScrollView>

    </LinearLayout>

</RelativeLayout>